@@ -7,7 +7,7 @@
 # common parts of schedule and schedule-server which are always needed
 
 require 5.012;
-package Schedule::Connect v6.2.1;
+package Schedule::Connect v6.3.0;
 
 use strict;
 use warnings;
@@ -34,7 +34,7 @@ my $extversion = undef;
 
 # The client accepts servers in the followin interval:
 
-my $servermin = version->declare('v6.0.0');
+my $servermin = $VERSION,
 my $serversup = version->declare('v7.0.0');
 my $serversupallowed = '';
 
@@ -48,15 +48,20 @@ my $serversupallowed = '';
 # If "undefined", no corresponding restriction is required.
 
 my $version620 = version->declare('v6.2.0');
+my $version621 = version->declare('v6.2.1');
 
 my %minversion = (
 # temporary:
-	'Schedule' => $version620,
+	'Schedule' => $VERSION,
 	'ScheduleServer' => $version620,
-	'Schedule::Client::Clientfuncs' => $VERSION,
+	'Schedule::Client::Clientfuncs' => $version621,
+	'Schedule::Client::Cmd::List' => $VERSION,
+	'Schedule::Client::Cmd::Queue' => $VERSION,
+	'Schedule::Client::Scheduleman' => $VERSION,
 	'Schedule::Helpers' => $version620,
-	'Schedule::Server::Serverman' => $version620,
+	'Schedule::Server::Loop' => $VERSION,
 	'Schedule::Server::Serverfuncs' => $VERSION,
+	'Schedule::Server::Serverman' => $version620,
 # Keep the following always:
 	'Schedule::Connect' => undef
 );
@@ -411,7 +416,7 @@ sub check_options {
 	$s->password($p)
 }
 
-sub exec_alpha() {
+sub exec_alpha {
 	my $s = shift();
 	$s->did_alpha(1);
 	my $alpha = $s->alpha();
