@@ -7,19 +7,19 @@ service_opts=(
 '(1 * -)'{'--help','-h'}'[print a brief help]'
 '(1 * -)'{'--man','-\\?'}'[show extended help as a manpage]'
 '(1 * -)'{'--version','-V'}'[print version and exit]'
-{'(--port)-P+','(-P)--port='}'[PORT (set TCP port)]:port:(127.0.0.1)'
-{'(--file)-f+','(-f)--file='}'[FILE (use FILE as socket)]:socket:_files "-g*(=)"'
-{'(--addr)-A+','(-A)--addr='}'[ADDR (set address)]:port:(8471)'
-{'(--timeout)-T+','(-T)--timeout='}'[SECONDS (set timeout)]:seconds:(10)'
-{'(--password)-y+','(-y)--password='}'[PASSWORD (encrypt using PASSWORD)]:password:(p P)'
-'*'{'-Y+','--passfile='}'[FILE (encrypt using password from FILE)]:file:_files'
+{'(--port)-P+','(-P)--port='}'[use specified TCP port]:port:(127.0.0.1)'
+{'(--file)-f+','(-f)--file='}'[use specified file as socket)]:socket:_files "-g*(=)"'
+{'(--addr)-A+','(-A)--addr='}'[use specified address]:port:(8471)'
+{'(--timeout)-T+','(-T)--timeout='}'[use specified timeout]:seconds:(10)'
+{'(--password)-y+','(-y)--password='}'[use specified password]:password:(p P)'
+'*'{'-Y+','--passfile='}'[use password from specified file]:file:_files'
 '--check[syntax checking for schedule-tmux]'
 '(--local -l '{'--tcp)-t','-t)--tcp'}'[use tcp socket (port)]'
 '(--tcp -t '{'--local)-l','-l)--local'}'[use unix domain socket (file)]'
 '(--no-color -nocolor -p '{'-F)--color','(--color)-F'}'[force color on non-terminal]'
 '(--color -F '{'--no-color --nocolor)-p','--nocolor -p)--no-color','--no-color -p)--nocolor'}'[non-colored output]'
 '(--daemon -B --detach -E '{'--bg --background)-b','--background -b)--bg','(--bg -b)--background'}'[run main task in background]'
-'*'{'-a+','--alpha='}'[CMD/OPT (alpha-command/option)]:command:_normal'
+'*'{'-a+','--alpha='}'[specify alpha-command/option)]:command:_normal'
 {'(--alpha-ignore)-J','(-J)--alpha-ignore'}'[ignore exit status of alpha-command)]'
 '(--bg --background -b --detach -E '{'--daemon)-B','-B)--daemon'}'[run semi-detached in background]'
 '(--bg --background -b --daemon -B '{'--detach)-E','-E)--detach'}'[run detached in background]'
@@ -29,12 +29,12 @@ case ${service} in
 (*server)
 	service_opts+=(
 {'(--skip-check)-S','(-S)--skip-check'}'[skip permission check (dangerous!)]'
-{'(--fd)-d+','(-d)--fd='}'[FD (use filedescriptor FD)]:file descriptor:(0)'
-{'(--umask)-m+','(-m)--umask='}'[UMASK (set UMASK)]:umask:(0077)'
-{'(--user)-u+','(-u)--user='}'[USER (use USER permissions)]:user name:_users'
-{'(--group)-g+','(-g)--group='}'[GROUP (use GROUP permissions)]:group name:_groups'
-'(--user -u '{'--uid)-U+','-u)--uid='}'[UID (use UID permissions)]:user id:(65534)'
-'(--group -g '{'--gid)-G+','-G)--gid='}'[GID (use GID permissions)]:group id:(65534)'
+{'(--fd)-d+','(-d)--fd='}'[use specified file descriptor]:file descriptor:(0)'
+{'(--umask)-m+','(-m)--umask='}'[use specified umask]:umask:(0077)'
+{'(--user)-u+','(-u)--user='}'[use specified user permissions]:user name:_users'
+{'(--group)-g+','(-g)--group='}'[use specified group permissions]:group name:_groups'
+'(--user -u '{'--uid)-U+','-u)--uid='}'[use specified UID permissions]:user id:(65534)'
+'(--group -g '{'--gid)-G+','-G)--gid='}'[use specified GID permissions)]:group id:(65534)'
 '(--no-change-user -n '{'--change-user)-c','-c)--change-user'}'[change user permissions]'
 '(--no-change-group -N '{'--change-group)-C','-C)--change-group'}'[change group permissions]'
 '(--keep-permissions -k --change-user -c --change-group -C '{'--change-permissions)-K','-K)--change-permissions'}'[change user/group permissions]'
@@ -50,10 +50,10 @@ case ${service} in
 );&
 (*)
 	service_opts+=(
-{'(--exit)-e+','(-e)--exit='}'[STATUS (set exitstatus)]:exitstatus:(0)'
+{'(--exit)-e+','(-e)--exit='}'[set specified exitstatus]:exitstatus:(0)'
 {'(--job)-j+','(-j)--job='}'[JOB (set jobnumber)]:jobnumber:(0)'
-'(--immediate -I '{'--ignore)-i+','-i)--ignore='}'[STATUS (force exitstatus)]:exitstatus:(0)'
-'(--ignore -i '{'--immediate)-I+','-I)--immediate='}'[STATUS (report exit immediately)]:exitstatus:(0)'
+'(--immediate -I '{'--ignore)-i+','-i)--ignore='}'[force specified exitstatus]:exitstatus:(0)'
+'(--ignore -i '{'--immediate)-I+','-I)--immediate='}'[report immediately specified status)]:exitstatus:(0)'
 '(--no-host --nohost -H '{'--no-user --nouser)-u','--nouser -u)--no-user','--no-user -u)--nouser'}'[Suppress output of user]'
 '(--no-user --nouser -u '{'--no-host --nohost)-H','--nohost -H)--no-host','--no-host -H)--nohost'}'[Suppress output of HOSTTEXT]'
 {'(--no-dir --nodir)-D','(--nodir -D)--no-dir','(--no-dir -D)--nodir'}'[Suppress output of PWD]'
@@ -63,10 +63,17 @@ case ${service} in
 '(--text --title '{'--no-title)--notitle','--notitle)--no-title'}'[Suppress windows title output]'
 '(--no-status --nostatus)--status[Force status line output]'
 '(-text --status '{'--no-status)--nostatus','--nostatus)--no-status'}'[Suppress status line output]'
-'--text=[FORMAT (set status/title text)]:format:("%a (%s) %u@%h%H %c" "%a(%s)%u@%h%H:%c" "%a (%s) %c %u@%h%H %d")'
-'*'{'-x+','--finished='}'[have all jobs finished (accumulative)]:job range:(\:)'
-'*'{'-o+','--ok='}'[have all jobs succeeded (accumulative)]:job range:(\:)'
-'*'{'-s+','--started='}'[have all jobs started (accumulative)]:job range:(\:)'
+'--text=[specify format for status/title]:format:("%a (%s) %u@%h%H %c" "%a(%s)%u@%h%H:%c" "%a (%s) %c %u@%h%H %d")'
+'--qtime=[specfiy queue time format]:time format:("%T" "%T %d.%m.%y")'
+'--stime=[specfiy start time format]:time format:("%T->" "%T %d.%m.%y ->")'
+'--etime=[specfiy end time format]:time format:("->%T" "->%T %d.%m.%y")'
+'(--qtime)'{'--no-qtime','--noqtime'}'[no queue time output]'
+'(--stime)'{'--no-stime','--nostime'}'[no start time output]'
+'(--etime)'{'--no-etime','--noetime'}'[no end time output]'
+'(--qtime --stime --etime --no-qtime --noqtime --no-stime --nostime --no-etime --noetime)'{'-n','--no-time','--notime'}'[no time output]'
+'*'{'-x+','--finished='}'[check specified jobs finished]:job range:(\:)'
+'*'{'-o+','--ok='}'[check specified jobs succeeded]:job range:(\:)'
+'*'{'-s+','--started='}'[check specified jobs started]:job range:(\:)'
 '1:command:->cmds'
 '*:command:->rest'
 );;
